tests/specs/graph/fast_check/inferred_unique_symbols__not_global.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
// this will fail because Symbol is local
function Symbol() {}

const key = Symbol("#keys");
const key2 = Symbol.for("#keys");

export class MyClass {
  [key] = 5;
  [key2] = "";
}

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 181,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a@*": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[missing-explicit-type]: missing explicit type in the public API
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:4:7
    |
  4 | const key = Symbol("#keys");
    |       ^^^ this symbol is missing an explicit type
    |
    = hint: add an explicit type annotation to the symbol

    info: all symbols in the public API must have an explicit type
    docs: https://jsr.io/go/slow-type-missing-explicit-type
